Fix up the spacing of the logo
To conform with the styleguide, fix the spacing for the logo between the
text and the crest when in a mobile view.

--- a/app/assets/stylesheets/static-pages/campaigns.scss
+++ b/app/assets/stylesheets/static-pages/campaigns.scss
@@ -112,7 +112,7 @@ section {
 
   @include media (mobile) {
     float: left;
-    margin: 0 0 1.5em 2em;
+    margin: 1em 0 1.5em 2em;
     padding: 0;
   }
 
